--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
                   <!DOCTYPE html>
                   <html>
                       <head>
+                          <title>PinetreeTech</title>
                           <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
                           <link rel="preconnect" href="https://fonts.gstatic.com">
                           <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
