--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
                   <!DOCTYPE html>
                   <html>
                       <head>
@@ -60,56 +61,47 @@
                       </head>
                       <body>
                         <div class="bg-white pt-4 pr-8 pb-4 pl-8">
-  <nav class="w-full bg-top bg-cover">
-    <div class="max-w-screen-2xl md:flex-row flex w-full justify-between mt-auto mr-auto mb-auto ml-auto">
-      <div class="bg-white md:m-0 hidden md:flex flex flex-row justify-between items-center mt-2 mb-2 ml-0">
-        <a class="" href="#">
-          <div class=" font-semibold text-base mr-6  text-center
-              text-gray-600 cursor-pointer " style="font-family: Raleway;">Contato</div>
-        </a>
-        <a class="" href="#">
-          <div class=" font-semibold text-base mr-6  text-center
-              text-gray-600 cursor-pointer " style="font-family: Raleway;">Sobre Nós</div>
-        </a>
-      </div>
-      <div class="bg-white order-first md:order-none flex flex-row justify-center items-center pt-0
-          "><img src="https://github.com/Pre-Suffix/Pre-Suffix.github.io/blob/main/logo-512.png?raw=true"
-          class="w-12 md:w-16 "/></div>
-      </div>
-    </div>
-    <div class="hidden mobile-menu">
-      <div class="">
-        <div class="active">
-          <a href="#">
-            <div class=" font-semibold text-base mt-2  undefined
-                text-center text-gray-600 cursor-pointer " style="font-family:
-                Raleway;">Product</div>
-          </a>
-          <a href="#">
-            <div class=" font-semibold text-base mt-2  undefined
-                text-center text-gray-600 cursor-pointer " style="font-family:
-                Raleway;">Features</div>
-          </a>
-          <a href="#">
-            <div class=" font-semibold text-base mt-2  undefined
-                text-center text-gray-600 cursor-pointer " style="font-family:
-                Raleway;">Pricing</div>
-          </a>
-          <button class="h-9 w-24 rounded-lg mt-2 mr-auto ml-auto  text-center text-base
-              font-normal flex items-center justify-center border-2 bg-white text-gray-600 border-white"
-              style="font-family: Arial;">Sign in</button><button class="h-9 w-24 rounded-lg hover:bg-blue-900
-              hover:border-blue-900 mt-2 mr-auto ml-auto  text-center text-base font-normal flex
-              items-center justify-center border-2 bg-blue-700 text-white border-blue-700" style="font-family:
-              Arial;">Sign up</button>
-        </div>
-      </div>
-    </div>
-  </nav>
+	<nav class="flex items-center justify-between flex-wrap bg-gray-900 p-6 rounded-md">
+	  <a href="index.html"> <div class="flex items-center flex-shrink-0 text-white mr-6 rounded-md border-white border hover:border-gray-400 hover:text-gray-400">
+		<svg width="54" height="54" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" class="mx-1 my-1">
+		 <defs>
+		  <linearGradient y2="1" x2="0" y1="0" x1="0" id="svg_6">
+		   <stop offset="0" stop-color="#276749"/>
+		   <stop offset="1" stop-color="#38A169"/>
+		  </linearGradient>
+		 </defs>
+		 <g>
+		  <title>Layer 1</title>
+		  <path id="svg_1" fill="url(#svg_6)" d="M304,496H208V432h96Zm24-320h48L256,16,136,176h48L96,288h64L64,416H448L352,288h64Z"/>
+		 </g>
+		</svg>
+		<span class="font-semibold text-xl tracking-tight mx-1 my-1">PinetreeTech</span>
+	  </div> </a>
+	  <div class="block lg:hidden">
+		<button class="flex items-center px-3 py-2 border rounded text-white border-teal-400 hover:text-gray-400 hover:border-white">
+		  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+		</button>
+	  </div>
+	  <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+		<div class="text-sm lg:flex-grow">
+		  <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-gray-400 mr-4">
+			Contato
+		  </a>
+		  <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-gray-400 mr-4">
+			Sobre Nós
+		  </a>
+
+		</div>
+		<div>
+		  <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:bg-green-700 mt-4 lg:mt-0 bg-green-500">Comprar</a>
+		</div>
+	  </div>
+	</nav>
 </div>
 <div class="bg-white lg:flex-row lg:py-32 xl:py-48 md:px-8 max-w-screen-2xl flex flex-col items-center shadow-lg mt-0
     mr-auto ml-auto pt-16 pr-4 pb-16 pl-4 relative pl-5">
   <div class="lg:w-1/2 lg:justify-end lg:bottom-0 lg:left-0 lg:items-center flex w-full h-full justify-center
-      items-center"><img
+      items-center mx-5 my-1"><img
       src="https://github.com/Pre-Suffix/Pre-Suffix.github.io/blob/main/captura%20de%20tela.png?raw=true" class="h-auto
       w-full lg:w-auto lg:h-full rounded object-contain object-top"/></div>
   <div class="xl:pr-32 lg:max-w-screen-xl flex justify-end mr-auto ml-auto relative max-w-xl">
