--- a/produtos.html
+++ b/produtos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./main.css" rel="stylesheet">
     <title>PinetreeTech</title>
-    <link rel="icon" type="image/x-icon" href="../assets/icon.svg">
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Pre-Suffix/Pre-Suffix.github.io/23a212cc4ceb0e68962dca6d8860be018890f4f6/icon.svg">
 </head>
 
 <html class="bg-slate-900">
@@ -18,7 +18,7 @@
             <a href="index.html">
                 <div
                     class="flex-shrink-0 flex items-center ml-8 bg-zinc-700 bg-opacity-20 hover:bg-opacity-100 py-3 px-3 rounded hover:bg-gray-700 transition duration-200 focus:shadow-outline shadow-lg">
-                    <img class="hidden lg:block h-8 w-auto" src="../assets/icon.svg" alt="PinetreeTech">
+                    <img class="hidden lg:block h-8 w-auto" src="https://raw.githubusercontent.com/Pre-Suffix/Pre-Suffix.github.io/23a212cc4ceb0e68962dca6d8860be018890f4f6/icon.svg" alt="PinetreeTech">
                     <h3 class="text-2xl h-8 font-bold text-gray-200">PinetreeTech</h3>
                 </div>
             </a>
